--- a/html-dummy/main.css
+++ b/html-dummy/main.css
@@ -49,6 +49,19 @@ a:hover {
 }
 
 
+.tabpanel ul li {
+	display: inline;
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-right: 10px;
+	width: 200px;
+}
+
+.tabpanel ul li a:hover {
+	text-decoration: none;
+}
+
+
 table, th, td {
 	border: 1px #888888 solid;
 	padding: 2px;
