refactored membership: now there is only one class, with a property MembershipType; editing memberships is done - except validation, which is not complete yet (refs #4142)

--- a/fablabman/src/main/webapp/css/main.css
+++ b/fablabman/src/main/webapp/css/main.css
@@ -115,3 +115,15 @@ div.tabpanel div.tab-row li.selected a {
   color:#333;
   padding-bottom:5px;
   }
+
+label.choice {
+	display:inline;
+	position:relative;
+	margin-left: 0.2em;
+	_top:0.2em;
+}
+
+input.radio {
+	display: inline;
+	margin-left: 0.5em;
+}
