--- a/fablabman/src/main/webapp/css/invoice.css
+++ b/fablabman/src/main/webapp/css/invoice.css
@@ -81,12 +81,16 @@ h1
 {
 	height: 75px;
 }
+#comment
+{
+	
+}
 #thx
 {
 	font-size: 16px;
 	font-weight: bold;
 }
-.footer
+#footer
 {
 	position: absolute;
 	bottom: 0px;
@@ -95,8 +99,4 @@ h1
 	margin-left: auto;
 	margin-right: auto;
 	width: 99%;
-}
-#foot1
-{
-	font-weight: bold;
 }
