--- a/fablabman/src/main/webapp/css/invoice.css
+++ b/fablabman/src/main/webapp/css/invoice.css
@@ -10,15 +10,15 @@ div
 {
 /* 	border: 2px solid; */
 }
-table, th, td
-{
-	padding: 2px;
-}
-td, th
-{
-	padding-left: 5px; 
-	padding-right: 5px;
-}
+/* table, th, td */
+/* { */
+/* 	padding: 2px; */
+/* } */
+/* td, th */
+/* { */
+/* 	padding-left: 5px;  */
+/* 	padding-right: 5px; */
+/* } */
 #page
 {
 	position: absolute;
@@ -72,9 +72,21 @@ h1
 	padding-right: 5px;
 	border:1px solid black;
 }
-#sum
+#sumtable
 {
-	width: 144px;
+	border:1px solid black;
+	width: 100%;
+}
+#sumtext
+{
+	text-align: left;
+	padding-left: 5px; 
+
+}
+#sumvalue
+{
+	text-align: right;
+	padding-right: 3px;
 }
 #disc
 {
