--- a/fablabman/src/main/webapp/css/main.css
+++ b/fablabman/src/main/webapp/css/main.css
@@ -1,9 +1,16 @@
 body { 
 	font-family: Helvetica, Arial, sans-serif; 
 	font-size: 12px;
-	
-	margin:0; 
-	padding:0; 
+	margin-top: 10px; 
+	padding:0;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #E6E6E6;
+}
+
+#main {
+    background-color: #FFFFFF;	
 }
 
 a {
@@ -48,28 +55,30 @@ a:hover {
 	border-top: 3px white solid;
 }
 
-
-table, th, td {
+#main table, #main th, #main td {
 	border: 1px #888888 solid;
 	padding: 2px;
 }
 
-table {
+#main table {
 	border-collapse: collapse;
 	font-size: 12px;
+	width: 99%;
 }
 
-th {
+#main th {
 	background-color: #dddddd;
 }
 
-td, th {
+#main td, #main th {
 	padding-left: 5px; 
 	padding-right: 5px;
 }
 
-
-
+#signInPanel table, #signInPanel td {
+	border : 0px;
+}
+	
 
 /* tab panel styles */
 div.tabpanel div.tab-row{
@@ -133,8 +142,4 @@ label.choice {
 input.radio {
 	display: inline;
 	margin-left: 0.5em;
-}
-
-#signInPanel form.table {
-	border : 0px;
 }
